<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/hello"/>
	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:id="@+id/ButtonMainMenu1" android:text="@string/ButtonMainMenu1">
	</Button>
	<Button 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/ButtonMainMenu2">
	</Button>
	<Button
		android:id="@+id/formsDownloaderButton"
		android:text="@string/formsDownloaderButtonText"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:onClick="formsDownloaderButtonOnClickHandler">
	</Button>
	<Spinner
		android:id="@+id/staticFormSelectionSpinner"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:prompt="@string/staticFormSelectionSpinnerText"/>
	<Button
		android:id="@+id/staticFormStartButton"
		android:text="@string/staticFormStartButtonText"
		android:onClick="staticFormStartButtonOnClickHandler"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
	</Button>
</LinearLayout>

